--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="build/css/app.css">
+    <script defer src="build/js/app.js"></script>
     <title>Document</title>
 </head>
 <body>
-    <h1>bienvenido</h1>
+    <div class="icons-container" id="container">
+
+    </div>
 </body>
 </html>
