se modifico el script js ademas de agregar 2 p elements con display flex y space between

--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
     <div class="icons-container" id="container">
 
     </div>
+    <div class="displayer">
+        <p>price</p>
+        <p>total</p>
+    </div>
 </body>
 </html>
