--- a/index.html
+++ b/index.html
@@ -13,8 +13,15 @@
 
     </div>
     <div class="displayer">
-        <p>price</p>
-        <p>total</p>
+        <div>
+            <p>price</p>
+            <div id="price">0</div>
+        </div>
+        <div>
+            <p>total</p>
+            <div id="total">0</div>
+        </div>
+     
     </div>
 </body>
 </html>
